# src/main/kotlin/com/terraformation/seedbank/api/seedbank/AccessionController.kt
@@ -140,6 +140,7 @@ data class UpdateAccessionRequestPayload(
     @Valid override val germinationTests: List<GerminationTestPayload>? = null,
     override val landowner: String? = null,
     override val numberOfTrees: Int? = null,
+    override val nurseryStartDate: LocalDate? = null,
     override val primaryCollector: String? = null,
     override val processingMethod: ProcessingMethod? = null,
     override val processingNotes: String? = null,
@@ -198,6 +199,7 @@ data class AccessionPayload(
     override val latestGerminationTestDate: LocalDate? = null,
     override val latestViabilityPercent: Int? = null,
     override val numberOfTrees: Int? = null,
+    override val nurseryStartDate: LocalDate? = null,
     override val photoFilenames: List<String>? = null,
     override val primaryCollector: String? = null,
     override val processingMethod: ProcessingMethod? = null,
@@ -269,6 +271,7 @@ data class AccessionPayload(
       model.latestGerminationTestDate,
       model.latestViabilityPercent,
       model.numberOfTrees,
+      model.nurseryStartDate,
       model.photoFilenames,
       model.primaryCollector,
       model.processingMethod,
